update title and subtitle

--- a/site/content/en/_index.html
+++ b/site/content/en/_index.html
@@ -1,10 +1,10 @@
 +++
-title = "Jobset"
-linkTitle = "Jobset"
-description = "TBD"
+title = "JobSet"
+linkTitle = "JobSet"
+description = "JobSet is a unified API for deploying HPC and AI/ML training workloads on Kubernetes"
 +++
 
-{{< blocks/cover title="Welcome to Jobset" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to JobSet" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="/docs/">
 		Read the docs <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -12,7 +12,7 @@ description = "TBD"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/kubernetes-sigs/jobset">
 		Github <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Kubernetes-native Job Queueing</p>
+	<p class="lead mt-5">A unified API for deploying HPC and AI/ML training workloads on Kubernetes</p>
 	{{< blocks/link-down color="info" id="description" >}}
 </div>
 {{< /blocks/cover >}}
